[project]
name = "noisepalace"
version = "0.1.0"
description = "Soon to be a well documented library of many noise functions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy>=2.3.5"]

[dependency-groups]
dev = ["basedpyright>=1.34.0", "ruff>=0.14.6"]

[tool.ruff]
line-length = 79
lint.extend-select = ["ANN", "I"]
lint.ignore = ["ANN401"]
lint.fixable = ["I", "F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 72

[tool.basedpyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "venv/",
    "build/",
    "dist/",
    "local/",
    "examples/",
    "docs/",
    "lib_testing/",
]
reportImportCycles = false
reportUnnecessaryIsInstance = false
reportImplicitStringConcatenation = false
reportUnusedCallResult = false
reportMissingTypeStubs = false
reportAny = false
reportExplicitAny = false
reportImplicitOverride = false
reportDeprecated = false
